Finished button mixin; applied mixin to home page buttons. Noticed footer was too wide - fixed it.

--- a/css/index.css
+++ b/css/index.css
@@ -183,6 +183,8 @@ header a {
   padding-right: 28px;
 }
 .footer {
+  max-width: 1000px;
+  margin: 0 auto;
   width: 100%;
   border-top: 2px dashed silver;
   background: #ffebcd;
@@ -244,4 +246,17 @@ header a {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .destination button {
+  width: 200px;
+  height: 45px;
+  background-color: teal;
+  color: white;
+  font-size: 1.8rem;
+  border-radius: 15px;
+  cursor: pointer;
+}
+.home .content-pick .destination button:hover {
+  background-color: white;
+  color: teal;
 }
