--- a/less/footer.less
+++ b/less/footer.less
@@ -1,8 +1,10 @@
 .footer {
+  max-width: 1000px;
+  margin: 0 auto;
   width: 100%;
   border-top: 2px dashed silver;
   background: @sandy-beach;
-  
+
   p {
     text-align: center;
     color: @font-color;
