--- a/less/home-page.less
+++ b/less/home-page.less
@@ -61,6 +61,10 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      button {
+        .custom-button(200px, 45px, teal, white);
+      }
     }
   }
 } // home
