--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,17 +1,24 @@
 // Mixins in here
 
-.custom-btn(@width: 50px, @height: 50px, @bcolor: white, @fcolor: black) {
+.custom-button(@width: 50px, @height: 50px, @bcolor: white, @fcolor: black) {
   width: @width;
   height: @height;
   background-color: @bcolor;
   color: @fcolor;
-  border: 1px solid black;
-  border-radius: 10px;
+  font-size: 1.8rem;
+  border-radius: 15px;
   cursor: pointer;
-  margin: 20px 0;
 
   &:hover {
-    background-color: @font-color;
-    color: @bgcolor;
+    background-color: @fcolor;
+    color: @bcolor;
   }
 }
+
+// started animation mixin - might come back to it... //
+// .colorfade(@bcolor: black, @fcolor: white) {
+//     @keyframes colorfade {
+//         from {background-color: @bcolor}
+//         to (background-color: @fcolor)
+//     }
+// }
